Add cart icon to pages and by clicking it will redirect the user to his/her cart details page

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
+<!-- TOCHECK: user can access his/her cart from any page? (make sure all pages extends base.html) -->
 <!-- TODO: every user has his/her own cart created when account created? -->
-<!-- TODO: user can access his/her cart from any page -->
 <!-- TODO: logged-in user can add books to his/her cart when browsing books -->
 {% block content %}
     <!--TODO: user can change the quantity of the item-->
     <!--TODO: display 'save for later' button to move the item to 'save for later'-->
     <!--TODO: user can remove the item from his/her cart-->
     <div align="center" style="color: steelblue">
-        <h1>Shopping Cart</h1>
+        <h1>My Shopping Cart</h1>
     </div>
         <table class="table">
             <thead class="thead-dark">
