--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,19 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
     <title>GSix Bookstore</title>
+
+    <div class="fixed-top">
+        <div style="background-color:#fff; border:none 1px; float:right; padding:10px;">
+            <a href="/cart" class="btn btn-info btn-sm">
+<!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
+                <span class="fas fa-shopping-cart fa-lg"> Cart</span>
+            </a>
+        </div>
+    </div>
 </head>
 <body>
     {% block content %}
