Implement save for later functionality for shopping cart

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,15 @@
 
     <div class="fixed-top">
         <div style="background-color:#fff; border:none 1px; float:right; padding:10px;">
+            <a href="/" class="btn btn-info btn-sm">
+                <span class="fas fa-home fa-lg"> Home</span>
+            </a>
+
+            <!-- TODO: Change href to to a normal user login page -->
+<!--            <a href="/admin">-->
+<!--                <button type="button" class="btn btn-primary btn-sm">Login</button>-->
+<!--            </a>-->
+
             <a href="/cart" class="btn btn-info btn-sm">
 <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
                 <span class="fas fa-shopping-cart fa-lg"> Cart</span>
