--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,42 +1,93 @@
 {% extends 'base.html' %}
 
-<!-- TOCHECK: user can access his/her cart from any page? (make sure all pages extends base.html) -->
+<!-- TODO: user can access his/her cart from any page? (make sure all pages extends base.html) -->
 <!-- TODO: every user has his/her own cart created when account created? -->
-<!-- TODO: logged-in user can add books to his/her cart when browsing books -->
+
 {% block content %}
-    <!--TODO: user can change the quantity of the item-->
-    <!--TODO: display 'save for later' button to move the item to 'save for later'-->
-    <!--TODO: user can remove the item from his/her cart-->
+    <!-- TODO: logged-in user can add books to his/her cart when browsing books -->
+    <!-- TODO: user can change the quantity of the item -->
+    <!-- TODO: user can remove the item from his/her cart -->
+
+    <!-- Display shopping cart details -->
     <div align="center" style="color: steelblue">
         <h1>My Shopping Cart</h1>
     </div>
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Book</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Price</th>
-                </tr>
-            </thead>
-            <tbody>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Book</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th scope="col">Save For Later?</th>
+            </tr>
+        </thead>
+        <tbody>
+            <form method="POST"> {% csrf_token %}
                 {% for cart_item in items %}
-                <tr>
-                    <td>{{cart_item.item.title}}</td>
-                    <td>{{cart_item.quantity}}</td>
-                    <td>$ {{cart_item.item.price}}</td>
-                </tr>
+                    {% if cart_item.save_for_later is False %}
+                        <tr>
+                            <td>{{cart_item.item.title}}</td>
+                            <td>{{cart_item.quantity}}</td>
+                            <td>$ {{cart_item.cost}}</td>
+                            <td>
+                                <input type="checkbox" name="saves" value="{{ cart_item.id }}">
+                            </td>
+                        </tr>
+                    {% endif %}
                 {% endfor %}
-            </tbody>
-        </table>
-        {% if items|length == 0 %}
-            <div align="center">
-                <p>
-<!--                     Cart is empty. <br \> -->
-                    <h2>Cart is empty.</h2>
-                    <a href="{% url 'books' %}">Click here to browse books.</a>
-                </p>
-            </div>
-        {% endif %}
-    <!-- TODO: display 'save for later' items -->
-    <!-- TODO: compute and display subtotal, update it as amount changes -->
+                <tr align="right">
+                    <td colspan="4" align="right">
+                        <button type="submit">Save Changes</button>
+                    </td>
+                </tr>
+            </form>
+        </tbody>
+        <!-- TODO: compute and display subtotal, update it as amount changes -->
+    </table>
+    {% if is_empty_cart %}
+        <div align="center">
+            <p>
+                <h2>Cart is empty.</h2>
+                <a href="{% url 'books' %}">Click here to browse books.</a>
+            </p>
+        </div>
+    {% endif %}
+
+    <!-- separate cart's table and save-for-later table -->
+    <br \>
+    <br \>
+    <br \>
+    <br \>
+
+    <!-- display 'save for later' items -->
+    <div align="center" style="color: steelblue">
+        <h1>Saved For Later</h1>
+    </div>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Book</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for cart_item in items %}
+                {% if cart_item.save_for_later is True %}
+                    <tr>
+                        <td>{{cart_item.item.title}}</td>
+                        <td>{{cart_item.quantity}}</td>
+                        <td>$ {{cart_item.cost}}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
+    {% if is_saved_empty is True %}
+        <div align="center">
+            <p>
+                <h2>The list of saved for later is empty.</h2>
+            </p>
+        </div>
+    {% endif %}
 {% endblock %}
