--- a/comment/templates/comment.html
+++ b/comment/templates/comment.html
@@ -15,10 +15,10 @@
     <div align="center" style="...">
     <form>
         <label for="comment">Comment:</label><br><br>
-        <input type="text" id="comment" name=""comment" size="100"><br><br>
+        <input type="text" id="comment" name="comment" size="100"><br><br>
         <label for="rating">Rating (between 0 and 5):</label><br><br>
         <input type="range" id="rating" name="rating" min="0" max="5"><br>
-        <h4>Would you like to leave your name?</h4>
+        <p>Would you like to leave your name?</p>
         <input type="radio" id="Yes" name="nickname" value="Yes">
         <label for="Yes">Yes</label><br>
         <input type="radio" id="No" name="nickname" value="No">
