--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Book Detail </title>
+</head>
+<body>
 {% extends 'base.html' %}
 
 {% block content %}
@@ -9,3 +16,7 @@
     </p>
     {% endfor %}
 {% endblock %}
+</body>
+</html>
+
+
