Added 10 Children's Books

--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Book Detail </title>
+    <title>Book </title>
 </head>
 <body>
 {% extends 'base.html' %}
@@ -19,14 +19,4 @@
 </body>
 </html>
 
-{% extends 'base.html' %}
 
-{% block content %}
-    {% for book in books %}
-    <p>
-        Title: {{book.title}}<br />
-        <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
-        Author: {{book.author}}<br />
-    </p>
-    {% endfor %}
-{% endblock %}
