--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -20,6 +20,13 @@ Books
         Title: {{book.title}}<br />
         <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
         Author: {{book.author}}<br />
+
+
+         <a href="/cart" class="btn btn-info btn-sm">
+                <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
+                <span class="fas fa-shopping-cart fa-lg"> Details </span>
+            </a>
+
     </p>
     {% endfor %}
 {% endblock %}
