Added 10 Children's Books

--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -22,7 +22,7 @@ Books
         Author: {{book.author}}<br />
 
 
-         <a href="/cart" class="btn btn-info btn-sm">
+         <a href="/bookdetails" class="btn btn-info btn-sm">
                 <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
                 <span class="fas fa-shopping-cart fa-lg"> Details </span>
             </a>
