Added 10 Children's Books

--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Book </title>
-</head>
-<body>
-
-<h1>
-Books
-
-</h1>
-
 
 {% extends 'base.html' %}
 
@@ -21,16 +8,15 @@ Books
         <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
         Author: {{book.author}}<br />
 
-
-         <a href="/bookdetails" class="btn btn-info btn-sm">
+        <a href="/books/bookdetail" class="btn btn-info btn-sm">
                 <!--                <i class="fas fa-shopping-cart fa-lg"></i>-->
-                <span class="fas fa-shopping-cart fa-lg"> Details </span>
+                <span class="fas fa-shopping-cart fa-lg"> Book Details </span>
             </a>
+
+
 
     </p>
     {% endfor %}
 {% endblock %}
-</body>
-</html>
 
 
