Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Book Details</title>
+    <title>Title</title>
 </head>
 <body>
-
-<h1> Book Detail </h1>
-
+<Book Details>
 </body>
 </html>
