--- a/bookdetail/templates/bookdetails.html
+++ b/bookdetail/templates/bookdetails.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1> BOOOK </h1>
-</body>
-</html>
+
+{% extends 'base.html' %}
+
+{% block content %}
+    {% for book in books %}
+    <p>
+        Title: {{book.title}}<br />
+        <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
+        Author: {{book.author}}<br />
+
+    </p>
+    {% endfor %}
+{% endblock %}
+
