Added 10 Children's Books

--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -7,7 +7,7 @@
         Title: {{book.title}}<br />
         <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
         Author: {{book.author}}<br />
-
+<a class="btn btn-primary" href="/bookdetail" role="Book Details">Link</a>
     </p>
     {% endfor %}
 {% endblock %}
