Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -21,10 +21,10 @@
   </thead>
   <tbody>
     <tr>
-
+<img src="..." alt="..." class="img-thumbnail">
       <td>Mark</td>
       <td>Otto</td>
-      <td>@mdo</td>
+      <td>Anthony L. Smith</td>
     </tr>
     <tr>
       <th scope="row">2</th>
