Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -7,7 +7,7 @@
 <body>
 <h1> This is the book detail page</h1>
 
-<img src="..." alt="..." class="img-thumbnail">
+
 <table class="table">
   <thead>
     <tr>
@@ -21,7 +21,7 @@
   </thead>
   <tbody>
     <tr>
-<img src="..." alt="..." class="img-thumbnail">
+        <td><img src="..." alt="..." class="img-thumbnail"></td>
       <td>Mark</td>
       <td>Otto</td>
       <td>Anthony L. Smith</td>
