Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -5,7 +5,7 @@
     <title>Book Detail</title>
 </head>
 <body>
-<h1> This is the book detail page</h1>
+<h1> BOOK DETAIL </h1>
 
 
 <table class="table">
