Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -22,9 +22,10 @@
   <tbody>
     <tr>
         <td><img src="..." alt="..." class="img-thumbnail"></td>
-      <td>Mark</td>
-      <td>Otto</td>
+      <td>Murder on the Orient Express</td>
+      <td>Agata Christie</td>
       <td>Anthony L. Smith</td>
+      <td>Horror</td>
       <td> Zero LLC</td>
     </tr>
 
