Added 10 Children's Books

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -24,7 +24,7 @@
         <td><img src="..." alt="..." class="img-thumbnail"></td>
       <td>Express</td>
       <td>Agata</td>
-      <td>Smith</td>
+      <td>Scary</td>
       <td>Horror</td>
       <td> Zero LLC</td>
     </tr>
