--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -37,7 +37,7 @@
                 {% endfor %}
                 <tr align="right">
                     <td colspan="4" align="right">
-                        <button type="submit">Save Changes</button>
+                        <button type="submit">Save For Later</button>
                     </td>
                 </tr>
             </form>
@@ -70,18 +70,29 @@
                 <th scope="col">Book</th>
                 <th scope="col">Quantity</th>
                 <th scope="col">Price</th>
+                <th scope="col">Move To Cart?</th>
             </tr>
         </thead>
         <tbody>
-            {% for cart_item in items %}
-                {% if cart_item.save_for_later is True %}
-                    <tr>
-                        <td>{{cart_item.item.title}}</td>
-                        <td>{{cart_item.quantity}}</td>
-                        <td>$ {{cart_item.cost}}</td>
-                    </tr>
-                {% endif %}
-            {% endfor %}
+            <form method="POST"> {% csrf_token %}
+                {% for cart_item in items %}
+                    {% if cart_item.save_for_later is True %}
+                        <tr>
+                            <td>{{cart_item.item.title}}</td>
+                            <td>{{cart_item.quantity}}</td>
+                            <td>$ {{cart_item.cost}}</td>
+                            <td>
+                                <input type="checkbox" name="unsaved" value="{{ cart_item.id }}">
+                            </td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+                <tr align="right">
+                    <td colspan="4" align="right">
+                        <button type="submit">Move To Cart</button>
+                    </td>
+                </tr>
+            </form>
         </tbody>
     </table>
     {% if is_saved_empty is True %}
