--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -7,6 +7,7 @@
             <p>{{ small.name }}</p>
              {% for book in small.wishlistitem_set.all %}
                 <p>{{ book.item.title }}</p>
+                <p>remove</p>>
              {% endfor %}
         {% endfor %}
 {% endblock %}
