--- a/comment/templates/comment.html
+++ b/comment/templates/comment.html
@@ -5,6 +5,7 @@
 <!-- TODO limit length of comment so it fits half the available space-->
 <!-- TODO add hover over of picture to display the name of the book-->
 <!-- TODO make the submit button update information about the book-->
+<!-- test of new branch -->
 
 {% extends 'base.html' %}
 
