changed some functionality in comment

--- a/comment/templates/comment.html
+++ b/comment/templates/comment.html
@@ -12,6 +12,7 @@
 {% block content %}
     <div align="center" style="color: steelblue">
     <h1>Comment and Rating</h1>
+    <h1>{{ title }}</h1>
     </div>
     <div align="center" style="...">
     <form>
