Change a minor detail

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -69,7 +69,7 @@
     <form action="#" method="get">
         <label for="bname">Book name:</label>
         <input type="text" id="bname" name="addToCart" value="{{ book.item.title }}">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Add To Cart">
     </form>
     <br \>
     <br \>
