--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-<h1>Profile</h1>
+    <div class="media">
+        <div class="media-body">
+            <h2 class="account-heading"> {{ user.username}}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+        </div>
+    </div>
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile Info</legend>
+            {{ user_form|crispy}}
+        </fieldset>
+
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
+
 
 {% endblock content%}
