--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class ="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Register A New Profile</legend>
-                {{ form.as_p }}
+                {{ form|crispy}}
             </fieldset>
 
             <div class="form-group">
@@ -15,7 +16,7 @@
 
         <div class="border-top pt-3">
             <small class="text-muted">
-                Return User?     <!--TODO: add redirect to login page-->
+                Return User?     
             </small>
         </div>
     </div>
