--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -3,11 +3,11 @@
     <div align = "center">
         <h1>Wishlist</h1>
     </div>
-        {% for small in wishlist.smallwishlist_set.all %}
+        {% for small in bigwishlist.smallwishlist_set.all %}
             <table class="table">
                 <thead class="thead-dark">
                     <tr>
-                        <th>{{ small.name }}</th>
+                        <th>{{small.name}}</th>
                         <th style="width:200px">Options</th>
                     </tr>
                 </thead>
@@ -18,7 +18,15 @@
                         <td>{{ book.item.title }}</td>
                         <td>
                          <input type="radio" id="remove" name="remove" value="{{book.id}}">
-                            <label for="remove">remove</label><br>
+                            <label for="remove">Remove</label><br>
+                         <input type="radio" id="move1" name="move1" value="{{book.id}}">
+                            <label for="move1">Move to 1st Wishlist</label><br>
+                         <input type="radio" id="move2" name="move2" value="{{book.id}}">
+                            <label for="move2">Move to 2nd Wishlist</label><br>
+                         <input type="radio" id="move3" name="move3" value="{{book.id}}">
+                            <label for="move3">Move to 3rd Wishlist</label><br>
+                         <input type="radio" id="cart" name="cart" value="{{book.id}}">
+                            <label for="cart">Move to Cart</label><br>
                         </td>
                     </tr>
                 </tbody>
