Added feature so that user can create up to 3 wishlists and name them once.

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -40,4 +40,16 @@
             <button type="submit">Save</button>
         </div>
     </form>
+    <br \>
+    <br \>
+    <div align="center">
+        <h4>Create a Wishlist</h4>
+    </div>
+    <form action="#" method="get">
+        <label for="swishlist">Wishlist name:</label>
+        <input type="text" id="swishlist" name="createWishlist">
+        <input type="submit" value="Create Wishlist">
+    </form>
+    <br \>
+    <br \>
 {% endblock %}
