Created a working book detail button that shows each books detail by their unique id

--- a/book/templates/bookdetail.html
+++ b/book/templates/bookdetail.html
@@ -1,38 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Book Detail</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1> BOOK DETAIL </h1>
 
 
 <table class="table">
-  <thead>
+    <thead>
     <tr>
-      <th scope="col">Picture</th>
-      <th scope="col">Name</th>
-      <th scope="col">Author</th>
-      <th scope="col">Description</th>
+        <th scope="col">Picture</th>
+        <th scope="col">Name</th>
+        <th scope="col">Author</th>
+        <th scope="col">Author Bio</th>
+        <th scope="col">Description</th>
         <th scope="col">Genre</th>
         <th scope="col">Publishing</th>
+        <th scope="col">Rating</th>
+        <th scope="col">Comments</th>
+
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     <tr>
-        <td><img src="..." alt="..." class="img-thumbnail"></td>
-      <td>Express</td>
-      <td>Agata</td>
-      <td>Scary</td>
-      <td>Horror</td>
-      <td> Zero LLC</td>
+        <td><img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"></td>
+
+        <td>{{book.title}}</td>
+        <td>{{book.author}}</td>
+        <td>{{book.bio}}</td>
+        <td>{{book.description}}</td>
+        <td>{{book.genre}}</td>
+        <td>{{book.publisher}}</td>
+        <td>{{book.rating}}</td>
+        <td>{{book.comments}}</td>
 
 
     </tr>
 
-  </tbody>
+    </tbody>
 </table>
-
-</body>
-</html>
+{% endblock %}
