--- a/book/templates/books.html
+++ b/book/templates/books.html
@@ -7,7 +7,12 @@
         Title: {{book.title}}<br />
         <img src="{{book.cover}}" height="100px" width="100px" alt="Book cover is not showing"><br />
         Author: {{book.author}}<br />
-<a class="btn btn-primary" href="/bookdetail" role="Book Details">Book Details</a>
+<!--<a class="btn btn-primary" href="/bookdetail" role="Book Details" value="{{book.id}}">Book Details</a>-->
+    <form action="bookdetail" method="get">
+        <button type="submit" class="btn btn-primary btn-sm" name="id" value="{{ book.id }}"> Book Detail
+        </button>
+    </form>
+
     </p>
     {% endfor %}
 {% endblock %}
